[package]
name = "router"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib","lib"]
path = "src/main.rs"

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.7"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
wasm-logger = "0.2"
yew = "0.18"
yew-router = "0.15.0"
yewtil = "0.4.0"
wasm-bindgen = "0.2.78"
serde_json = "1.0"
serde = "1.0"
exprocess = { path = "./libs/exprocess"}
