[package]
name = "roll-role"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib","lib"]
path = "src/main.rs"

[workspace]
members = [
    "libs/exprocess",
    "libs/webutil",
    "libs/cafeteria",
    "packages/presentation",
    "packages/showcase",
    "packages/js_bridge"
]

[profile.release]
opt-level = 's'

[dependencies]
log = "0.4"
rand = { version = "0.8" }
wasm-logger = "0.2"
yew = "0.19"
yew-router = "0.16.0"
yewtil = "0.4.0"
wasm-bindgen = "0.2.78"
serde_json = "1.0"
serde = "1.0"
exprocess = { path = "./libs/exprocess"}
webutil = { path = "./libs/webutil"}
mytil = { path = "./libs/mytil"}
presentation = {path = "./packages/presentation"}
js_bridge = {path = "./packages/js_bridge"}
